--- a/index.html
+++ b/index.html
@@ -18,5 +18,18 @@
   <button>Delivery Address</button>
   <hr>
   <a href="/thanks.html" class="btnm">Checkout</a>
+
+  <script>
+    mixpanel.people.set({
+    "$email": "greg@kite.ly",    // only special properties need the $
+
+    "$created": "2011-03-16 16:53:54",
+    "$last_login": new Date(),         // properties can be dates...
+
+    "credits": 150,                    // ...or numbers
+
+    "gender": "Male"                    // feel free to define your own properties
+  });
+  </script>
 </body>
 </html>
